src/pages/Popup/Popup.css
html {
  height: 500px; /* max: 750px */
  width: 550px; /* max: 1000px */
}

.h1-backlog {
  text-align: center;
  font-variant: small-caps;
  color: white;
  margin-bottom: -10px;
}

/* Styles for the sticky header */
.sticky-h1 {
  position: sticky;
  top: 0;
  background-color: #191c28;
  z-index: 100; /* Ensure the header is above other content */

  /* Adjust the height and margin to make the sticky header taller */
  height: 40px;
  margin: 0;
  align-items: center;
}

::-webkit-scrollbar {
  display: none;
}

.App {
  margin-top: -10px;
  position: absolute;
  text-align: center;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;

  height: 500px;
  width: 530px;
  padding: 10px;
  background-color: #191c28;
  color: white;
  overflow: auto;
}

.App-header {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.warning-message {
  font-weight: bold;
  font-size: 20px;
  z-index: 200;
}

.button-backlog-album {
  font-size: 14px;
  align-items: center;
  padding: 6px 14px;
  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif, bold;
  border-radius: 6px;
  border: none;
  margin-left: auto;
  margin-bottom: 10px;
  transition: background-color 0.3s ease; /* Add smooth transition effect */
  -webkit-text-stroke: 0.1px black;
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  background: #006ed1;
  background-origin: border-box;
  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
    inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.button-backlog-clear {
  font-size: 14px;
  align-items: center;
  padding: 6px 14px;
  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif, bold;
  border-radius: 6px;
  border: none;
  margin-left: 10px;
  margin-bottom: 10px;
  transition: background-color 0.3s ease; /* Add smooth transition effect */
  -webkit-text-stroke: 0.1px black;
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  background: #790000;
  background-origin: border-box;
  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
    inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.button-backlog-cancel {
  font-size: 14px;
  align-items: center;
  padding: 6px 14px;
  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif, bold;
  border-radius: 6px;
  border: none;
  margin-left: 10px;
  margin-bottom: 10px;
  transition: background-color 0.3s ease; /* Add smooth transition effect */
  -webkit-text-stroke: 0.1px black;
  color: #fff;
  text-decoration: none;
  font-weight: bold;
  background: #006ed1;
  background-origin: border-box;
  box-shadow: 0px 0.5px 1.5px rgba(54, 122, 246, 0.25),
    inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2);
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.button-backlog-album:hover {
  background-color: #005dbf;
}

.button-backlog-clear:hover {
  background-color: #650000;
}

.button-backlog-cancel:hover {
  background-color: #005dbf;
}

.button-delete {
  border: none;
  border-radius: 6px 0 6px 0;
  position: absolute;
  height: 20px;
  width: 20px;
  background: #14171f;
  margin-top: -227px;
  margin-left: -85px;
}

.button-delete:hover {
  background-color: #650000;
}

.input-search {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 6px 14px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 10px;
  border-radius: 20px;
  border: none;
  font-size: 16px;
  color: white;
  background-color: #14171f;
  outline: none;
  height: 15px;
  width: 400px;
  font-size: 12px;
  padding-left: 30px;
}

.search-icon {
  position: absolute;
  left: 10px;
  margin-top: -31.5px;
  margin-left: 52px;
  pointer-events: none;
}

a:link {
  color: white;
  text-decoration: none;
}

a:visited {
  color: white;
  text-decoration: none;
}

/* Updated styles for column headers */
.column-headers ul {
  text-align: center;
  font-size: 14px;
  display: flex;
  padding: 0;
  margin: 0;
  list-style: none;
  border-radius: 6px;
  margin-bottom: -8px;
}

.column-headers li {
  -webkit-text-stroke: 0.1px black;
  flex: 1;
  padding: 8px;
  cursor: pointer;
  border-left: none;
  user-select: none;
  -webkit-user-select: none;
  background-color: #006ed1;
  color: white;
  font-weight: bold;
  border-radius: 0;
  transition: background-color 0.3s ease;
  font-size: 90%;
}

.column-headers li:first-child {
  border-radius: 6px 0px 0px 6px;
}

.column-headers li:last-child {
  border-radius: 0px 6px 6px 0px;
}

.column-headers li:hover {
  background-color: #005dbf;
}

/* Updated styles for URL list items */

/* This defines the list itself */
nav ul {
  flex-flow: row wrap;
  flex-direction: row;
  flex-wrap: wrap;
  list-style-type: none; /* Remove bullet point from the list items */
  padding: 0; /* Remove default padding for <ul> element */
}

/* This chunk determines the borders and background for each list item. */
nav ul li {
  align-items: center; /* Center the content vertically */
  padding: 6px;
  background-color: #14171f;
  margin-bottom: 4px;
  border-radius: 6px;
  transition: background-color 0.3s ease;
}

/* This defines the hover for the list item. Switches it to white. */
nav ul li:hover {
  background-color: #2c303d; /* Change background color on hover */
}

/* Column headers are affected by this as well */
nav li {
  display: flex; /* Display list items in a flex container */
  justify-content: space-between; /* Spread contents evenly in the available space */
  padding: 8px;
  background-color: #191c28;
  margin-bottom: 4px;
  border-radius: 6px;
}

nav ul li a {
  color: #000;
  font-weight: bold;
  display: block; /* Makes click area larger */
  padding-left: 3px;
  padding-right: 3px;
}

nav li a {
  color: #000;
  text-decoration: none;
}

nav li button {
  background-color: #ff6961;
  color: #fff;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin-left: 8px; /* Add some space between the buttons */
}

/* Add styles for the grid container */
.grid-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap; /* Wrap items to the next row */
  justify-content: space-evenly; /* Spacing between items in a row */
  margin: 0 -10px; /* Negative margin to counteract padding on grid items */
}

/* Style the grid items */
.grid-item {
  width: 150px; /* Set the width for 4 items per row with spacing */
  height: 220px;
  margin: 3px; /* Spacing between items */
  background-color: #14171f;
  border-radius: 6px;
  padding: 10px; /* Adjust padding as needed */
  transition: background-color 0.3s ease;
  text-overflow: ellipsis;
  max-width: 150px;
  max-height: 250px;
}

/* Style the content within the grid items */
.grid-item a.tall {
  max-height: 2em; /* Set a maximum height for the text content */
  display: block; /* Ensure proper handling of overflow */
  white-space: nowrap; /* Prevent text from wrapping */
  text-overflow: ellipsis; /* Display ellipsis (...) for truncated text */
}

/* Apply hover effect to grid items */
.grid-item:hover {
  background-color: #2c303d;
}

/* Adjust any specific styles for the grid items here */

.paddedSpan {
}

.boldSpan {
  font-weight: bold;
}

.italicsSpan {
  font-style: italic;
}

.tall {
  text-align: left;
  justify-content: left;
}

.removeTextDecoration {
  font-weight: normal;
}

